# adventofcode-16

./: .gitignore  adventofcode.cabal
day1/: README.md  day1.hs  day1.rb
day1/data/: test4.in
day10/: day10.hs
day10/data/: test1.in
day11/: README.md  day11.hs
day12/: README.md  day12.hs
day13/: README.md  day13.hs
day14/: README.md  day14.hs
day15/: README.md  day15.hs
day15/data/: data2.in
day16/: README.md  day16.hs
day17/: README.md  day17.hs
day18/: README.md  day18.hs
day19/: README.md  day19.hs  sim.rb
day2/: README.md  day2.hs
day20/: README.md  day20.hs
day20/data/: test2.in
day21/: README.md  day21.hs
day23/: README.md  day23.hs
day23/data/: test2.in
day3/: README.md  day3.hs
day4/: README.md  day4.hs
day5/: README.md  day5.hs
day6/: README.md  day6.hs
day7/: README.md  day7.hs
day8/: README.md  day8.hs
day9/: README.md  day9.hs
